--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <section class="header">
-      <img src="profile.png" alt="https://static.vecteezy.com/system/resources/previews/024/183/541/non_2x/female-avatar-blonde-woman-portrait-illustration-of-a-female-character-in-a-modern-color-style-vector.jpgs" />
+      <img src="profile.png" alt="https://www.shareicon.net/data/2016/07/26/802033_user_512x512.png" />
       <div>
         <h1>Muqaddus Bibi</h1>
         <p>Communication and Media Student</p>
@@ -61,7 +61,14 @@
         </div>
       </div>
     </section>
-
+<section>
+  <h2>Additional Information</h2>
+  <h3>Certifications</h3>
+  <ul>
+    <li>Online journalism at Rruters Online Journalism (2024)</li>
+    <li>Digital Media Production - Coursera (2024)</li>
+  </ul>
+</section>
     <section class="section">
       <h2>Experience</h2>
       <div class="timeline">
@@ -80,7 +87,7 @@
           <div class="date">06/2024 – 08/2024</div>
           <div class="details">
             <strong>Marketing Intern</strong><br>
-            XYZ Marketing Solutions
+            FALAH PROPERTY SOLUTIONS
             <ul>
               <li>Contributed to social media strategies and advertising campaigns.</li>
               <li>Supported client research and digital promotions.</li>
@@ -110,7 +117,13 @@
         <li>Event Planning</li>
       </ul>
     </section>
-
+      <section>
+    <h2>Language</h2>
+    <ul>
+      <li>English (Fluent)</li>
+      <li>Urdu (Native)</li>
+    </ul>
+  </section>
     <section class="section">
       <h2>Reference</h2>
       <p><strong>Dr. Ayesha Qamar</strong><br>Assistant Professor, Communication Department<br>Fatima Jinnah Women University<br>Email: abc@university.edu | Phone: +927654378998</p>
