--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <main>
     <section class="header">
-      <img src="profile.png" class="https://www.shareicon.net/data/2016/07/26/802033_user_512x512.png" alt=" https://www.shareicon.net/data/2016/07/26/802033_user_512x512" />
+      <img src="profile.png" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover;" alt="https://www.shareicon.net/data/2016/07/26/802033_user_512x512.png" />
+
       <div>
         <h1>Muqaddus Bibi</h1>
         <p>Communication and Media Student</p>
