--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="timeline-item">
           <div class="date">2019-2021</div>
           <div class="details">
-            <strong>Intermediate (FSc/FA)</strong><br>
+            <strong>Intermediate (FSc)</strong><br>
             F74 Margalla college , Islamabad
           </div>
         </div>
